# query-generator

./: .env.example  .gitignore  MIGRATION_TO_QDRANT.md  POLICIES_OVERHAUL_SUMMARY.md  README.md  ROADMAP.md  ROADMAP_COLLABORATION.md  TRANSACTION_HANDLING.md  TRANSACTION_SUMMARY.md  docker-compose.yml
.github/workflows/: deploy.yml
query-generator-backend/: .gitignore  Dockerfile  alembic.ini  create_admin_user.py  init-db.sql  pyproject.toml
query-generator-backend/app/: __init__.py  main.py
query-generator-backend/app/core/: audit.py  config.py  embeddings.py  guardrails.py  model_registry.py  openai_client.py  prompts.py  qdrant_client.py  retrieval.py  settings_registry.py  settings_service.py
query-generator-backend/app/migrations/: env.py
query-generator-backend/app/migrations/versions/: 5f3a8c9d1e2b_add_soft_delete_to_policies.py  a1c4f7b9e3d2_add_settings_and_cost.py  b8e3a2c5d6f1_drop_stale_unique_index_on_policies.py  d5ab2d2fe7c0_add_deleted_at_to_user_roles.py  e589e92b779b_initial_migration.py  f2c1a7b8d901_phase1_sector_overhaul.py  migrate_to_qdrant.py
query-generator-backend/app/models/: __init__.py  audit.py  auth.py  base.py  catalog.py  correction.py  history.py  knowledge.py  policies.py  sector.py  settings.py  vector.py
query-generator-backend/app/routers/: auth.py  catalogs.py  corrections.py  cost_summary.py  generate.py  history.py  knowledge.py  policies.py  sector_settings.py  sectors.py  settings.py
query-generator-backend/app/schemas/: auth.py  catalog.py  generate.py  knowledge.py
query-generator-backend/app/utils/: sql_formatter.py
query-generator-frontend/: .gitignore  Dockerfile  package-lock.json  package.json
query-generator-frontend/app/: globals.css  layout.tsx  page.tsx
query-generator-frontend/archive/: generate-query-page.tsx.old
query-generator-frontend/components/: catalog-knowledge-tab.tsx  corrections-page.tsx  cost-dashboard-page.tsx  debug-panel.tsx  error-boundary.tsx  generate-query-page.tsx  manage-catalogs-page.tsx  navigation.tsx  policy-dialog.tsx  query-generator.tsx  query-history-page.tsx  sector-settings-page.tsx  sectors-admin-page.tsx  security-policies-page.tsx  settings-page.tsx  user-settings-page.tsx
query-generator-frontend/lib/: api-client.ts  api.ts  catalog-utils.ts  config.ts  utils.ts
query-generator-frontend/public/database-logos/: README.md
